Stray weights. Also fixed a bug with how settings menu "log out" option was wrapping by shortening, also added a heart on the donate one for emphasis/cuteness

--- a/liwords-ui/src/App.scss
+++ b/liwords-ui/src/App.scss
@@ -115,7 +115,7 @@ a.plain,
     text-align: center;
     h4 {
       @include type-default;
-      font-weight: 600;
+      font-weight: 700;
       font-size: 18px;
       letter-spacing: 0;
     }
