--- a/liwords-ui/src/topbar/topbar.scss
+++ b/liwords-ui/src/topbar/topbar.scss
@@ -104,7 +104,7 @@ body {
     transform: translateX(-3px) rotate(-10deg);
     position: relative;
     font-family: $font-default;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 28px;
     line-height: 35px;
     @include colorModed() {
